# envoy-extension-in-rust

./: Cargo.toml  Dockerfile  README.md  diagram.drawio  docker-compose.yaml  envoy.yaml
img/: diagram.drawio
sample-app/mesh/: envoy-filter.yaml  ingress-gateway.yaml
sample-app/services/jwtissuer/: jwtissuer.yaml
sample-app/services/portfolio/: Dockerfile  go.mod  portfolio-wasm-sdk.yaml  portfolio.go  portfolio.yaml
sample-app/services/pricing/: Dockerfile  go.mod  pricing-wasm-sdk.yaml  pricing-wasm-wasme.yaml  pricing.go  pricing.yaml
src/: lib.rs
