[package]
name = "add-auth-header"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jwt-simple = "0.11.5"
log = "0.4.19"
proxy-wasm = "0.2.1"
serde = "1.0.163"
serde_json = "1.0.96"
url = "2.4.0"
